# animate-convert

./: .gitignore  CLAUDE.md  PLAN.md  README.md  agents.md  orchestrate.py
animate/: CLAUDE.md  PLAN.md  README.md  pyproject.toml
convert/: CLAUDE.md  PLAN.md  README.md  __main__.py  config.py  main.py  pyproject.toml
convert/converters/: to_apng.py  to_gif.py  to_mp4.py  to_webp.py
convert/core/: ffmpeg.py  pipeline.py
convert/tools/: loop.py
convert/upscale/: realesrgan.py  waifu2x.py
