[project]
name = "convert"
version = "0.1.0"
description = "Local media processing: upscale, GIF, MP4, loop"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
convert = "convert.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["convert*"]
